# NOCAP-join

./: .gitignore  CMakeLists.txt  README.md  measure-read-write-asymmetry.sh
JCCH-exp/: Q12.sql  jcch-q12-exp.py  jcch-setup.sh
JCCH-exp/dbgen/: build.c  dbgen  dss.h  qgen
exp/: exp-emul.sh  exp-intro.sh  exp-tmp.sh  exp.sh  mount-script.sh  part-stat-exp-fig4.sh  scalability-exp.py  test.sh  vary-R-exp.py  vary-buffer-cc-with-selection.py  vary-buffer-size-emul-DHH.py  vary-buffer-size-emul-fig1.py  vary-buffer-size-emul-fig7-direct-io.py  vary-buffer-size-emul-fig8-direct-io.py  vary-buffer-size-emul-fig8.py  vary-buffer-size-emul-fig9.py  vary-buffer-size-emul-micro.py  vary-buffer-size-emul.py  vary-buffer-size-noise-emul.py  vary-buffer-size.py  vary-lSR-cc.sh
job-exp/: convert.sh  download-and-convert.sh  job-exp.py  left-table-schema.txt  right-table-schema.txt
plot-sources/: CT-partition-size-plot.py  dataset-DHH-vs-NOCAP-emul-plot.py  main-scripts.bat  main-scripts.sh  tpch-vary-large-buffer-size-emul-plot.py  vary-DHH-thresholds-emul.py  vary-large-buffer-size-emul-plot.py  vary-large-buffer-size-noise-emul-plot.py
src/: data_converter.cc  dist_generator.cc  dist_generator.h  emulator.cc  emulator.h  emulator_main.cc  estimator.cc  estimator.h  estimator_main.cc  parameters.h  schema.cc  schema.h  tpch_converter.cc  tpch_data.cc  tpch_data.h  workload_generator.cc
src/hash/: CMakeLists.txt  city.cc
tpch-exp/: Q12.sql  left-table-schema.txt  qgen  right-table-schema.txt  tpch-exp.py  tpch-q12-exp.py  tpch-setup.sh  tpch-skewed-setup.sh
(+8 files in other folders)
